--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Home</a>
+            <a class="navbar-brand" href="{% url 'webapp:adds_index' %}">Объявления</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,6 +22,12 @@
                     {% block links %}
                     {% endblock %}
                     {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'webapp:adds_create' %}">Добавить объявление</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'webapp:adds_index_moderated' %}">Ожидают модерацию</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти {{ user.username }}</a>
                         </li>
@@ -38,10 +44,11 @@
         </div>
     </nav>
 
+<div class="container">
 {% block content %}
 
 {% endblock %}
-
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </body>
