--- a/source/webapp/templates/adds/list_moderated.html
+++ b/source/webapp/templates/adds/list_moderated.html
@@ -21,7 +21,7 @@
                         <p class="card-text text-style">Дата публикации: {{ ad.public_at }}</p>
                     </div>
                     <div class="btn-group w-100" role="group" aria-label="Basic example">
-                        <a href="{% url 'webapp:adds_detail' ad.id %}" class="btn btn-danger rounded-0 py-2 bot-buttons-style">Просмотр</a>
+                        <a href="{% url 'webapp:adds_detail_moderated' ad.id %}" class="btn btn-danger rounded-0 py-2 bot-buttons-style">Просмотр</a>
                         <a class="btn btn-primary rounded-0 py-2 bot-buttons-style">Редактировать</a>
                     </div>
                 </div>
