--- a/source/webapp/templates/partial/form.html
+++ b/source/webapp/templates/partial/form.html
@@ -12,5 +12,5 @@
 
 <br>
 {% if not fields_only %}
-    <input type="submit" value={{ button_text|default:"Сохранить" }} >
+    <input type="submit" class="btn btn-secondary mt-3" value={{ button_text|default:"Сохранить" }} >
 {% endif %}
