--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -29,7 +29,10 @@
                             <a class="nav-link" href="{% url 'webapp:adds_index_moderated' %}">Ожидают модерацию</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти {{ user.username }}</a>
+                            <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'accounts:profile' user.id %}">{{ user.username }}!</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
