--- a/source/webapp/templates/partial/adds_list.html
+++ b/source/webapp/templates/partial/adds_list.html
@@ -16,11 +16,16 @@
                         <p class="card-text text-style">Статус: {{ ad.get_status_display }}</p>
                         <p class="card-text text-style">Дата создания: {{ ad.created_at }}</p>
                         <p class="card-text text-style">Дата публикации: {{ ad.public_at }}</p>
+                        <p>test111 {{ user.profile }}</p>
                     </div>
                     <div class="btn-group w-100" role="group" aria-label="Basic example">
                         <a href="{% url 'webapp:adds_detail' ad.id %}" class="btn btn-danger rounded-0 py-2 bot-buttons-style">Просмотр</a>
-                        <a href="{% url 'webapp:adds_update' ad.id %}" class="btn btn-primary rounded-0 py-2 bot-buttons-style">Редактировать</a>
-                        <a href="{% url 'webapp:adds_delete' ad.id %}" class="btn btn-primary rounded-0 py-2 bot-buttons-style">Удалить</a>
+                        {% if perms.webapp.change_ad or user.profile == ad.author %}
+                            <a href="{% url 'webapp:adds_update' ad.id %}" class="btn btn-primary rounded-0 py-2 bot-buttons-style">Редактировать</a>
+                        {% endif %}
+                        {% if perms.webapp.delete_ad or user.profile == ad.author %}
+                            <a href="{% url 'webapp:adds_delete' ad.id %}" class="btn btn-primary rounded-0 py-2 bot-buttons-style">Удалить</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
