--- a/source/accounts/templates/profile.html
+++ b/source/accounts/templates/profile.html
@@ -2,14 +2,9 @@
 
 {% block content %}
 <div class="card mb-3">
-        <div class="card-body">
-            <h5 class="card-title">{{ user_obj.username }}</h5>
-            {% if user_obj.profile.about %}
-                <p class="card-text">{{ user_obj.profile.about }}</p>
-            {% endif %}
-            {% if user_obj.profile.about %}
-                <p class="card-text"><a href="#">{{ user_obj.profile.github }}</a><small class="text-muted"></small></p>
-            {% endif %}
+        <div class="card-body text-center">
+            <h5 class="card-title">{{ user_obj.username }} {{ user_obj.profile.phone }}</h5>
+            <p><a href="{% url 'accounts:profile_update' user_obj.id %}" class="btn btn-secondary w-50">Изменить номер телефона</a></p>
         </div>
     </div>
     <h2>Объявления пользователя {{ user_obj.username }}</h2>
