--- a/source/accounts/templates/profile_change.html
+++ b/source/accounts/templates/profile_change.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Поменять личные данные</h1>
+    <h1>Изменить номер телефона</h1>
     <form method="post">
         {% csrf_token %}
-        {% include 'partial/form.html' with fields_only=True %}
+        {% include 'partial/form.html' with button_text='Изменить' %}
     </form>
 {% endblock %}
