--- a/source/webapp/templates/partial/adds_list.html
+++ b/source/webapp/templates/partial/adds_list.html
@@ -12,11 +12,11 @@
                         <div class="tittle-card border-top text-center border-bottom border-dark border-4">
                             <h5 class="card-title my-3 bot-name">{{ ad.title }}</h5>
                         </div>
-                        <p class="card-text text-style">{{ ad.text }}</p>
-                        <p class="card-text text-style">Статус: {{ ad.get_status_display }}</p>
-                        <p class="card-text text-style">Дата создания: {{ ad.created_at }}</p>
-                        <p class="card-text text-style">Дата публикации: {{ ad.public_at }}</p>
-                        <p>Создатель: {{ ad.author }}</p>
+                        <p class="card-text text-style">Описание: <b>{{ ad.text }}</b></p>
+                        <p class="card-text text-style">Статус: <b>{{ ad.get_status_display }}</b></p>
+                        <p class="card-text text-style">Дата создания: <b>{{ ad.created_at }}</b></p>
+                        <p class="card-text text-style">Дата публикации: <b>{{ ad.public_at }}</b></p>
+                        <p>Создатель: <a href="{% url 'accounts:user' ad.author.id %}">{{ ad.author }}</a></p>
                     </div>
                     <div class="btn-group w-100" role="group" aria-label="Basic example">
                         <a href="{% url 'webapp:adds_detail' ad.id %}" class="btn btn-danger rounded-0 py-2 bot-buttons-style">Просмотр</a>
