--- a/source/webapp/templates/adds/detail.html
+++ b/source/webapp/templates/adds/detail.html
@@ -17,10 +17,10 @@
             </div>
             <div class="btn-group w-100" role="group" aria-label="Basic example">
                 {% if perms.webapp.change_ad or user.profile == ad.author %}
-                    <a href="{% url 'webapp:adds_update' ad.id %}" class="btn btn-primary rounded-0 py-2 bot-buttons-style">Редактировать</a>
+                    <a href="{% url 'webapp:adds_update' ad.id %}" class="btn btn-warning rounded-0 py-2 bot-buttons-style"><i class="bi bi-pencil-fill"></i></a>
                 {% endif %}
                 {% if perms.webapp.delete_ad or user.profile == ad.author %}
-                    <a href="{% url 'webapp:adds_delete' ad.id %}" class="btn btn-primary rounded-0 py-2 bot-buttons-style">Удалить</a>
+                    <a href="{% url 'webapp:adds_delete' ad.id %}" class="btn btn-danger rounded-0 py-2 bot-buttons-style"><i class="bi bi-trash-fill"></i></a>
                 {% endif %}
             </div>
         </div>
