--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'accounts:profile' user.id %}">{{ user.username }}!</a>
+                            <a class="nav-link" href="{% url 'accounts:profile' user.id %}">Мой Профиль</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
