--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'accounts:profile' user.id %}">Мой Профиль</a>
                         </li>
+                        <li class="nav-item">
+                            <p class="nav-link">Привет {{ user.username }}</p>
+                        </li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'accounts:login' %}">Войти</a>
